Pushing fix for navbar responsiveness on small devices

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -189,4 +189,8 @@
 
   .personal-descriptor {
     width: 315px !important; }
+
+  #navigation-sticky-wrapper {
+    height: 50px !important;  
+  }
 }
